<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/softwere_update_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_17"
        android:text="@string/software_update_to"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed"
            android:textSize="@dimen/text_size_17"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="@dimen/text_size_17"/>
    </LinearLayout>

    <TextView
        android:id="@+id/error_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_17"
        android:text="@string/error_code"/>

</LinearLayout>