<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/main_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_update_ready_title"
        android:textColor="@color/titles"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_update_ready_msg1"
        android:textColor="@color/conf_text"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/update_ready_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_update_ready_msg2"
        android:textColor="@color/conf_text"
        android:textSize="17sp"
        android:layout_marginBottom="30dp"/>


    <Button
        android:id="@+id/system_update_ready_install_now_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/restart_now"
        style="@style/button"/>

</LinearLayout>
