<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/main_padding">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_wifi_notice_title"
        android:textColor="@color/titles"
        android:textSize="22sp"
        android:gravity="start"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_wifi_msg"
        android:textColor="@color/conf_text"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_wifi_msg2"
        android:textColor="@color/conf_text"
        android:textSize="17sp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/not_connected_wifi_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:text="@string/ok_button"
        style="@style/button"/>

</LinearLayout>
