<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/softwere_update_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_17"
        android:text="@string/software_update_to"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/applied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applied"
            android:textSize="@dimen/text_size_17"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/titles"
            android:textSize="@dimen/text_size_17" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView

                android:id="@+id/configurable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/conf_text"
                android:text="@string/system_update_available_msg"
                android:textSize="17sp"/>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/learn_more_online_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/button_text_color"
        android:text="@string/learn_more_onlice"
        android:textSize="@dimen/text_size_17"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
