<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/main_padding"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/mobile_ic"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/content_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_update_available_title"
                android:gravity="center_vertical|start"
                android:textColor="@color/titles"
                android:textSize="@dimen/title_text_size_25"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/ScrollView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <TextView
                    android:padding="10dp"
                    android:id="@+id/configurable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/conf_text"
                    android:text="@string/system_update_available_msg"
                    android:textSize="17sp"/>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/learn_more_online_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learn_more_onlice"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/button_text_color"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject_no_thanks"
                android:layout_marginBottom="10dp"
                style="@style/button"/>

            <Button
                android:id="@+id/later_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defer_download_later"
                android:layout_marginBottom="10dp"
                style="@style/button"/>

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_download_now"
                style="@style/button"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
