<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Verizon. All Rights Reserved.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="@dimen/main_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="32dip"
            android:layout_height="match_parent"
            android:src="@drawable/mobile_ic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_notif_layout_low_battary_title"
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_notif_layout_low_battary_msg"
            android:textColor="@android:color/background_dark"
            android:textSize="13sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/learnmorebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textColor="@color/conf_text"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="7dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/low_battary_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:text="@string/time"
            android:textColor="@color/conf_text"/>

    </LinearLayout>
</LinearLayout>
